spec/e2e/type/object.lit
type Foo {}

let foo = Foo();
foo(); # error: [line 4] Can only call functions and types.
